# DrkEngine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2021-02-27_02-02-38/: details.md  results.csv  results.md  results.txt
.github/workflows/: ci.yaml  test.yaml  test.yml  tests.yml
ConsoleChess/: CMakeLists.txt
ConsoleChess/inc/: Application.h  Application.hpp
ConsoleChess/include/: Application.h
ConsoleChess/src/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp
DrkEngine/: CMakeLists.txt
DrkEngine/.github/workflows/: test.yml
DrkEngine/inc/: Board.h  Board.hpp  Chess.h  ChessPrimitives.h  Core.h  Core.hpp  DrkEngine.h  Eval.h  Eval.hpp  Pieces.h  Pieces.hpp  Position.h  Position.hpp
DrkEngine/include/: CMakeLists.txt  Chess.h  Core.h  DrkEngine.h  Engine.h  Position.h
DrkEngine/include/DrkEngine/: Chess.hpp  Engine.hpp
DrkEngine/resources/: starting_position.drk
DrkEngine/src/: Assert.h  Board.cpp  CMakeLists.txt  Chess.cpp  ChessPrimitives.cpp  Core.cpp  Core.h  DrkEngine  DrkEngine.cpp  Engine.cpp  Engine.h  Eval.cpp  Log.h  Pieces.cpp  Position.cpp
DrkEngine/src/DrkEngine/: CMakeLists.txt  Core.cpp  Core.hpp  Util.cpp  Util.hpp
DrkEngine/src/DrkEngine/Chess/: Board.cpp  CMakeLists.txt  Piece.hpp  Pieces.cpp
DrkEngine/src/DrkEngine/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  EvalPosition.hpp
inc/: Board.hpp  ChessPrimitives.hpp  CommandLineTools.hpp  Core.hpp  DrkEngine.hpp  Engine.hpp  Eval.hpp  EvalPosition.hpp  Piece.hpp  Pieces.hpp  Position.hpp  Util.hpp
include/: DrkEngine.hpp
include/DrkEngine/: Chess.hpp  Engine.hpp
scripts/: build.sh  build2.sh  build_tests.bat  buildtests.bat  buildtests.sh  cleanbuild.bat  cleanbuild.sh  run.sh  run_tests.bat  run_tests.sh  runtests.bat  runtests.sh
src/: Board.cpp  CMakeLists.txt  ChessPrimitives.cpp  CommandLineTools.cpp  Core.cpp  Core.hpp  Engine.cpp  Eval.cpp  EvalPosition.cpp  Piece.cpp  Pieces.cpp  Position.cpp  Util.cpp  Util.hpp
src/Chess/: Board.hpp  ChessPrimitives.cpp  ChessPrimitives.hpp  Piece.cpp  Pieces.hpp  Position.cpp  Position.hpp
src/Engine/: Eval.cpp  Eval.hpp  EvalPosition.cpp
test/: CMakeLists.txt
test/resources/: example_print_board.txt  starting_position.drk
test/src/: CMakeLists.txt  Main.cpp  TestUtils.cpp  Tests.cpp  Tests.hpp
tests/: CMakeLists.txt  Main.cpp  TestUtils.cpp  Tests.cpp  Tests.hpp
tests/src/: Main.cpp  TestUtils.cpp  Tests.cpp  Tests.hpp
